--- a/index.css
+++ b/index.css
@@ -44,13 +44,13 @@ The designs were created to the following widths:
 
 body {
     background-color: rgb(255, 243, 243);
-    max-width: 375px;
     margin: auto;
     padding: 0;
     font-family: 'josefin sans', sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-size: 16px;
 }
 
 .container {
@@ -136,11 +136,11 @@ form {
     height: 100%;
     right: 0;
     cursor: pointer;
-    /* box-shadow: 5px 5px 15pxbox-shadow: 5px 5px 15px 5px rgba(226, 148, 148, 0.05); rgba(8, 7, 7, 0.005); */
+    box-shadow: 5px 5px 15px 1px hsl(0, 67%, 88%);
 }
 
 #submit-btn:hover {
-    filter: blur();
+    background: linear-gradient(to left, hsl(0, 54%, 75%), hsl(0, 100%, 89%));
 }
 
 #error-icon {
@@ -163,11 +163,17 @@ form {
     margin-left: 1rem;
     margin-top: 0.4rem;
 }
+@media only screen and (max-width: 800px) {
+    #desktop {
+        display: none;
+    }
+}
 
-
-@media only screen and (min-width: 1301px) {
+@media only screen and (min-width: 801px) {
     body {
-       
+        min-width: 1300px;
+       max-width: 1440px;
+       min-height: 100vh;
     }
 
     #mobile {
@@ -175,12 +181,41 @@ form {
     }
 
     .container {
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(12, 1fr);
+        max-height: 800px;
+        align-content: center;
+        margin: auto;
     }
-}
 
-@media only screen and (max-width: 1300px) {
+    .container > header {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+        margin: 3rem 12rem 0 12rem;
+    }
+
     #desktop {
-        display: none;
+        grid-column: 3/4;
+        grid-row: 1 / 12;
+        display: inline-block;
+    }
+
+    .content {
+        grid-column: 1 / 3;
+        grid-row: 4 / 12;
+        margin: 0 12rem 0 12rem;
+    }
+
+    .content > h1 {
+        text-align: left;
+        font-size: 4.5rem;
+        line-height: 4.7rem;
+    }
+
+    #paragraph {
+        text-align: left;
+        line-height: 1.7rem;
+        margin-bottom: 2rem;
     }
 }
