--- a/index.css
+++ b/index.css
@@ -177,6 +177,7 @@ form {
         min-width: 1300px;
        max-width: 1440px;
        min-height: 100vh;
+       background-image: url(images/bg-pattern-desktop.svg);
     }
 
     #mobile {
